# gitfetch

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASES.md  default.nix  flake.nix  log.md  pyproject.toml  requirements.txt  run.py  setup.py  task.md
.gitfetch-worktrees/: .parent-hints
.github/aur/: .SRCINFO  PKGBUILD
.github/workflows/: ci.yml  jekyll-gh-pages.yml  release.yml  update-aur.yml  update-homebrew.yml
docs/: Gemfile  _config.yml  colors.md  configuration.md  contributors.md  development.md  features.md  gallery.md  index.md  installation.md  providers.md  usage.md
docs/assets/css/: custom-dark-moke.css
rust/gitfetch-tui/: Cargo.toml
rust/gitfetch-tui/src/: main.rs
src/gitfetch/: __init__.py  cache.py  calculations.py  cli.py  config.py  constants.py  display.py  exceptions.py  fetcher.py  providers.py  search_query.py  text_patterns.py
tests/: test_cache.py  test_cli.py  test_display.py  test_fetcher.py  test_search_query.py
